Add link to clone this repo

--- a/uva_grad_sem_git_guide.tex
+++ b/uva_grad_sem_git_guide.tex
@@ -242,6 +242,11 @@ files as you wish and commit to this project. You would setup a new
 GitHub project and set that as the origin by following the GitHub
 setup steps above.
 
+The source code for these notes can be cloned via:
+\begin{lstlisting}
+git clone https://github.com/cjl8zf/uva-grad-sem-git-guide
+\end{lstlisting}
+
 \section{Overleaf}
 There is background integration of Git inside of Overleaf. In the left
 side bar there is a Git option which allows you to clone the Overleaf
