--- a/uva_grad_sem_git_guide.tex
+++ b/uva_grad_sem_git_guide.tex
@@ -29,7 +29,7 @@ you if you would like to install it.
 Once Git has been installed one can access it from the terminal /
 command line. On Windows the command line (CMD) is accessed easily by
 holding ``Windows Key'' and ``r'' together to open the run menu. Then
-tyupe in ``cmd'' and press ``enter''. While on Mac the terminal is
+type in ``cmd'' and press ``enter''. While on Mac the terminal is
 opened as explained above. One can check to see if git is properly
 installed by running
 \begin{lstlisting}[language=bash]
@@ -189,8 +189,8 @@ To https://github.com/cjl8zf/test.git
  * [new branch]      master -> master
 Branch 'master' set up to track remote branch 'master' from 'origin'.
 \end{lstlisting}
-This will prompt you for your github password. This will only need to
-be done one time! Now you should see the tracked file has appeared on github.
+This will prompt you for your GitHub password. This will only need to
+be done one time! Now you should see the tracked file has appeared on GitHub.
 
 The real utility of Git comes from the way it allows multiple authors
 / programmers to collaborate on projects without over-writing other
