Changed some wording

--- a/uva_grad_sem_git_guide.tex
+++ b/uva_grad_sem_git_guide.tex
@@ -152,16 +152,16 @@ Date:   Thu Dec 3 14:26:46 2020 -0500
 \end{lstlisting}
 This is the most basic use of git. Now after you make changes to your
 file, stage the file, and commit it again with the relevant
-information, and this will add to your repo. Notice the long string of
+message, and this will add to your repo. Notice the long string of
 numbers and letters, this is the unique id of this commit. It is
 generated via a hashing function of the input (which in itself is
 mathematically interesting).
 
 \section{Pushing and Pulling and GitHub}
-So far this repo is only stored locally on your computer inside of
-this folder. We wish to store copies of our repo somewhere else. A
-good choice is GitHub. Now after Microsoft bought GitHub any user can
-store private repositories. After making account on
+So far this repo is only stored locally on your computer inside of the
+\lstinline{test} folder. We wish to store copies of our repo somewhere
+else. A good choice is GitHub. Now after Microsoft bought GitHub any
+user can store private repositories. After making account on
 \href{https://github.com/}{https://github.com/} you can make a new
 repository on the website, set it to private, and maybe name it say
 ``test''. Once this has been done you can push the local repository
